--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,6 +31,22 @@ jobs:
             context: ./frontend/
             push: true
             tags: ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest
+        - name: Install Trivy
+          uses: aquasecurity/setup-trivy@v0.2.2
+        - name: Scan backend image with Trivy
+          run: trivy image --exit-code 0 --severity HIGH,CRITICAL ${{ secrets.DOCKER_USER }}/docker-project-backend:latest | tee trivy-backend.txt
+        - name: Upload Trivy backend report
+          uses: actions/upload-artifact@v3
+          with:
+            name: trivy-backend
+            path: trivy-backend.txt
+        - name: Scan frontend image with Trivy
+          run: trivy image --exit-code 0 --severity HIGH,CRITICAL ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest | tee trivy-frontend.txt
+        - name: Upload Trivy frontend report
+          uses: actions/upload-artifact@v3
+          with:
+            name: trivy-frontend
+            path: trivy-frontend.txt
 
   run-with-docker-compose:
     name: Push Docker image to DockerHub
