--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -61,4 +61,6 @@ jobs:
         env:
           COMPOSE_PROFILES: prod
         with:
-          services: backend,frontend
+          services: |
+            backend
+            frontend
